Bug 11472 - smbstatus does not correctly report SMB3_10 and SMB3_11 protocols
Summary: smbstatus does not correctly report SMB3_10 and SMB3_11 protocols
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.3.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-28 13:14 UTC by Ralph Wuerthner
Modified: 2020-12-11 13:23 UTC (History)
2 users (show)

See Also:


Attachments
[PATCH] s3: add suport for SMB3_10 and SMB3_11 protocol in smbstatus (1.01 KB, patch)
2015-08-28 13:14 UTC, Ralph Wuerthner
no flags Details
Patch for v4-3-test (1.34 KB, patch)
2015-09-01 13:20 UTC, Stefan Metzmacher
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Wuerthner 2015-08-28 13:14:19 UTC
Created attachment 11376 [details]
[PATCH] s3: add suport for SMB3_10 and SMB3_11 protocol in smbstatus

clients connected via SMB3_10 or SMB3_11 are not correctly listed via smbstatus:

# smbstatus 

Samba version 4.3.0rc3
PID     Username      Group         Machine            Protocol Version       
------------------------------------------------------------------------------
0:22008   VIRTUAL1\administrator  VIRTUAL1\domain users  127.0.0.1    (ipv4:127.0.0.1:47531) Unknown (0x0311)

Service      pid     machine       Connected at
-------------------------------------------------------
share        0:22008   127.0.0.1     Fri Aug 28 14:38:18 2015

Please see my proposed patch in the attachment.
Comment 1 Stefan Metzmacher 2015-09-01 13:20:00 UTC
Created attachment 11389 [details]
Patch for v4-3-test
Comment 2 Volker Lendecke 2015-09-01 13:29:48 UTC
What about https://lists.samba.org/archive/samba-technical/2015-August/109248.html ?

Shouldn't we comment on that?
Comment 3 Jeremy Allison 2015-09-01 15:50:55 UTC
(In reply to Volker Lendecke from comment #2)

Yep, we should figure out if the master patch is correct before pushing to 4.3.0.
Comment 4 Stefan Metzmacher 2015-09-02 06:39:54 UTC
(In reply to Jeremy Allison from comment #3)

I think the master patch is correct and matches what we currently
report for other dialects.

Changing the output style can be discussed for master only,
but then we should also change the values we use in
smb,conf and other places too.
Comment 5 Stefan Metzmacher 2017-04-07 15:23:31 UTC
This is fixed in 4.4.0 and higher